# materials2textbook

./: .env.example  .gitattributes  .gitignore  AGENTS.md  COLLABORATOR_HANDOFF.md  README.md  material_paths.py  open_digital_book.bat  opencode.local.example.json  pyproject.toml  requirements.txt  多智能体编排生成论文精读.md
docs/: COLLABORATOR_HANDOFF.md  cloud_collaboration_layout.md  cloud_handoff_for_collaborator.md  data_organization_feasibility_review.md  file_structure.md  material_pipeline_forward_plan.md  material_preprocessing_scripts.md  textbook_generation_optimization_plan.md  two_person_textbook_project_task_allocation.md  unprocessed_material_inventory_review.md  whole_book_next_gap_report.md  切片工具说明.md  同伴素材一键生成电子教材.md  多智能体编排完成审计.md  多智能体编排开发计划.md  多智能体编排生成论文精读.md  项目架构安排.md
examples/: README.md  document_segments.jsonl
scripts/: _check_evidence.py  _check_paths.py  _check_videos.py  _fix_local_paths.py  _run_framework.py  _run_full.sh  _test_imports.py  _verify_topic.py  ask_digital_book.py  backfill_weak_chapter_material_map.py  build_chapter_evidence_pack.py  build_class_learning_report.py  build_fixed_book_inputs.py  build_material_inventory.py  cut_reviewed_video_clips.py  material_paths.py  merge_material_batch.py  open_digital_book.py  package_digital_book.py  process_audio_structured_mvp.py  process_material_block_mvp.py  process_reference_docs_mvp.py  review_material_batch.py  run_agent_workflow.py  run_chapter_digital_textbook.py  run_first_round_tig.py  run_full_digital_textbook.py  run_pipeline.py  run_topic_textbook.py  serve_digital_book_ask.py  (+5 more)
(+663 files in other folders)
