[project]
name = "materials2textbook"
version = "0.1.0"
description = "Multi-agent workflow scaffold for turning teaching materials into evidence-grounded textbook drafts."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
asr = [
    "faster-whisper>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
